Fixed carousel button functionality. Fixed overflowing text in freelancer cards. Fixed key ID errors in freelancer cards. Commented out StrictMode as it causes DOM to render twice (making too many calls to API via Axios)

--- a/src/components/FreelancerCard/FreelancerCard.css
+++ b/src/components/FreelancerCard/FreelancerCard.css
@@ -4,15 +4,16 @@
     margin-bottom: 8%;
     padding: 2%;
     text-align: center;
-    border-radius: 15px;
+    border-radius: 5px;
     background: linear-gradient(20deg, rgba(2, 0, 36, 1) 0%, rgb(255, 255, 255) 0%, rgba(5, 94, 140, 1) 100%);
     color: white;
-    box-shadow: 0 0 15px black;
+    box-shadow: 0 0 10px black;
 }
 
 .freelancer-card-title {
     margin-top: 5%;
     margin-bottom: 5%;
+    font-size: 140%;
 }
 
 .freelancer-card-image {
@@ -29,6 +30,7 @@
 .freelancer-card-text {
     color: black;
     margin-bottom: 6%;
+    font-size: 85%;
 }
 
 .freelancer-card-button {
